--- a/M425Pack/DESCRIPTION
+++ b/M425Pack/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Author: Jacob Jashinsky, Garret Saunders 
 Maintainer: Jacob Jashinsky <jacobjashinsky@gmail.com>
 Description: It will add confidence bands to a existing graph. It will also output the limits at a given value.
-License: Public
+License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
